# Django-settings

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
config/: settings.py
