[project]
name = "django-project"
version = "0.1.0"
description = "Django project with Docker and CI/CD"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "psycopg2-binary>=2.9",
    "gunicorn>=21.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=4.1",
    "black>=24.0",
    "isort>=5.13",
]

[tool.uv]
package = false


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--cov",
    "--cov-report=term-missing",
]
